# mlxforge

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SPECIFICATION.md  STORIES.md
.github/workflows/: ci.yml
Formula/: libmlxforge.rb  mlxforge.rb
apps/: mlxforge.cpp  mlxforge_cli.cpp  xllm.cpp  xllm_cli.cpp
bench/: README.md  bench.py  config.py  engines.py  loadgen.py  prompts.py  report.py  scenarios.py
bindings/node/: README.md  binding.gyp  index.d.ts  index.js  package.json
bindings/node/src/: addon.cc
bindings/node/test/: smoke.cjs
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/examples/: chat.rs
bindings/rust/src/: lib.rs
bindings/rust/tests/: smoke.rs
bindings/swift/: .gitignore  Package.swift  README.md
bindings/swift/Sources/CMLXForge/: shim.c
bindings/swift/Sources/Example/: main.swift
bindings/swift/scripts/: make_xcframework.sh
cmake/: Dependencies.cmake  abi-baseline.txt  mlxforge.pc.in
doc/: README.md  abi-stability.md  applications.md  architecture.md  conformance.md  contributing.md  distribution.md  embedding.md  llm-architecture.md  performance-research-2026-06.md  supported-models.md
doc/whitepaper/: .gitignore  Makefile  README.md  mlxforge-whitepaper.tex  references.bib
reference/: README.md  dump_ref.py  gen_unicode_tables.py
reference/fixtures/: argmax.npy  block0.npy  chat_ids.npy  embeddings.npy  greedy_gaps_kvq4.npy  greedy_gaps_kvq8.npy  greedy_tokens.npy  greedy_tokens_kvq4.npy  logits_last.npy  manifest.json  prompt_0_ids.npy  prompt_1_ids.npy  prompt_2_ids.npy
reference/fixtures_gemma/: manifest.json  tokenizer_corpus.json
reference/fixtures_qwen3/: argmax.npy  attn_norm0.npy  block0.npy  embeddings.npy  greedy_gaps_kvq4.npy  greedy_gaps_kvq8.npy  greedy_tokens.npy  greedy_tokens_kvq4.npy  k_rope0.npy  logits_last.npy  manifest.json  prompt_0_ids.npy  prompt_1_ids.npy  prompt_2_ids.npy  q_pre0.npy  q_rope0.npy  tokenizer_corpus.json  v0.npy
reference/fixtures_qwen3_5/: argmax.npy  attn_in0.npy  attn_in3.npy  attn_out0.npy  attn_out3.npy  block0.npy  block3.npy  chat_ids.npy  chat_ids_nothink.npy  embeddings.npy  greedy_tokens.npy  logits_last.npy  manifest.json  prompt_0_ids.npy  prompt_1_ids.npy  prompt_2_ids.npy  tokenizer_corpus.json
reference/fixtures_qwen3_embedding/: embed_doc.npy  embed_doc_ids.npy  embed_query.npy  embed_query_ids.npy  manifest.json
reference/fixtures_qwen3_moe/: attn_norm0.npy  block0.npy  chat_ids.npy  chat_ids_nothink.npy  embeddings.npy  greedy_tokens.npy  k_rope0.npy  logits_last.npy  manifest.json  moe_gates0.npy  moe_out0.npy  q_pre0.npy  q_rope0.npy  v0.npy
reference/fixtures_qwen3_vl/: argmax.npy  attention_mask.npy  deepstack_0.npy  deepstack_1.npy  deepstack_2.npy  embeds_merged.npy  embeds_text.npy  greedy_tokens.npy  image_grid_thw.npy  image_rgb.npy  input_ids.npy  llm_block0.npy  llm_k_rope0.npy  llm_q_rope0.npy  logits_last.npy  manifest.json  pixel_values.npy  pos_ids.npy  visual_pos_masks.npy  vit_block0.npy  vit_out.npy  vit_patch_embed.npy  vit_pos_embed.npy  vit_rotary.npy
scripts/: check-abi.sh  conformance.sh  test-image.sh
src/cache/: batch_kv_cache.cpp  batch_kv_cache.h  block_pool.cpp  block_pool.h  block_store.cpp  block_store.h  kv_budget.cpp  kv_budget.h  kv_cache.cpp  kv_cache.h  kv_quant.cpp  kv_quant.h  prefix_cache.cpp  prefix_cache.h
src/capi/: mlxforge.cpp  mlxforge.h
src/core/: config.cpp  config.h  env.cpp  env.h  gguf.cpp  gguf.h  hf_download.cpp  hf_download.h  logging.cpp  logging.h  model_source.cpp  model_source.h  weights.cpp  weights.h
src/inspect/: schematic_html.cpp
src/model/: decoder_model.cpp  decoder_model.h  llama.cpp  llama.h  model_factory.cpp  model_factory.h  qwen3.cpp  qwen3.h  qwen3_5.cpp  qwen3_5.h  qwen3_moe.cpp  qwen3_moe.h  qwen3_vl.cpp  qwen3_vl.h  sdpa.cpp  sdpa.h  skinny_matmul.cpp  skinny_matmul.h
src/model/vision/: vit.cpp  vit.h
src/runtime/: batching.cpp  batching.h  embedding.cpp  embedding.h  engine.cpp  engine.h  metrics.h  multimodal_stream.cpp  multimodal_stream.h  single_stream.cpp  single_stream.h  worker.cpp  worker.h
src/sample/: json_grammar.cpp  json_grammar.h  sampler.cpp  sampler.h
src/scheduler/: request.h  scheduler.cpp  scheduler.h
src/server/: anthropic.cpp  base64.h  config.cpp  config.h  http_server.cpp  http_server.h  openai.cpp  openai.h
src/tokenizer/: bpe.cpp  bpe.h  encoder_backend.h  spm.cpp  spm.h  tokenizer.cpp  tokenizer.h  unicode_tables.h
src/vision/: image_decode.cpp  image_decode.h  preprocess.cpp  preprocess.h
tests/: CMakeLists.txt  doctest_main.cpp  smoke_test.cpp
tests/cache/: batch_kv_cache_test.cpp  batch_kv_filter_merge_test.cpp  block_pool_test.cpp  block_store_test.cpp  kv_budget_test.cpp  kv_cache_quantized_test.cpp  kv_cache_test.cpp  kv_quant_cache_test.cpp  prefix_cache_test.cpp
tests/capi/: capi_test.cpp
tests/core/: config_test.cpp  gguf_test.cpp  model_source_test.cpp  weights_test.cpp
tests/fixtures/: hf_api_model_info.json  shard_index.json
tests/fixtures/hf_cache/models--org--dangling/refs/: main
tests/fixtures/hf_cache/models--org--name/snapshots/deadbeef/: config.json
tests/model/: batched_decode_test.cpp  llama_block_test.cpp  llama_forward_test.cpp  llama_front_test.cpp  quantized_sdpa_test.cpp  quantized_test.cpp  qwen3_5_test.cpp  qwen3_moe_test.cpp  qwen3_test.cpp  qwen3_vl_test.cpp  skinny_matmul_test.cpp  vit_test.cpp
tests/runtime/: bucketing_test.cpp  embedding_test.cpp  engine_test.cpp  prefill_prefix_test.cpp  prefill_test.cpp  single_stream_test.cpp
tests/sample/: json_grammar_test.cpp  sampler_test.cpp
tests/scheduler/: continuous_batch_test.cpp  prefix_reuse_test.cpp  prefix_spill_test.cpp  scheduler_test.cpp  validation_test.cpp  worker_test.cpp
tests/server/: anthropic_test.cpp  hardening_test.cpp  openai_test.cpp  sse_test.cpp
tests/support/: model_fixture.h  reference.h  reference_test.cpp
tests/tokenizer/: bpe_test.cpp  spm_test.cpp  tokenizer_test.cpp
tests/vision/: preprocess_test.cpp
(+4 files in other folders)
